--- a/tests/SprykerTest/Zed/MessageBrokerAws/codeception.yml
+++ b/tests/SprykerTest/Zed/MessageBrokerAws/codeception.yml
@@ -11,9 +11,9 @@ coverage:
         include:
             - '../../../../src/*'
 suites:
-    Business:
-        path: Business
-        class_name: MessageBrokerAwsBusinessTester
+    Communication:
+        path: Communication
+        class_name: MessageBrokerAwsCommunicationTester
         modules:
             enabled:
                 - Asserts
@@ -21,4 +21,5 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\ConfigHelper
                 - \SprykerTest\Shared\Testify\Helper\LocatorHelper
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
-                - \SprykerTest\Shared\Propel\Helper\TransactionHelper
+                - \SprykerTest\Zed\MessageBrokerAws\Helper\MessageBrokerAwsHelper
+                - \SprykerTest\Zed\Testify\Helper\Business\BusinessHelper
