--- a/tests/SprykerTest/Zed/MessageBrokerAws/codeception.yml
+++ b/tests/SprykerTest/Zed/MessageBrokerAws/codeception.yml
@@ -11,6 +11,18 @@ coverage:
         include:
             - '../../../../src/*'
 suites:
+    Business:
+        path: Business
+        class_name: MessageBrokerAwsBusinessTester
+        modules:
+            enabled:
+                - Asserts
+                - \SprykerTest\Shared\Testify\Helper\Environment
+                - \SprykerTest\Shared\Testify\Helper\ConfigHelper
+                - \SprykerTest\Shared\Testify\Helper\LocatorHelper
+                - \SprykerTest\Shared\Testify\Helper\DependencyHelper
+                - \SprykerTest\Zed\MessageBrokerAws\Helper\MessageBrokerAwsHelper
+                - \SprykerTest\Zed\Testify\Helper\Business\BusinessHelper
     Communication:
         path: Communication
         class_name: MessageBrokerAwsCommunicationTester
