--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "php": ">=7.4",
         "spryker/guzzle": "^2.0.0",
         "spryker/kernel": "^3.30.0",
-        "spryker/message-broker-extension": "^1.0.0",
+        "spryker/message-broker-extension": "*",
         "spryker/symfony": "^3.7.0"
     },
     "require-dev": {
