--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "async-aws/sns": "^1.0.0",
         "async-aws/sqs": "^1.0.0",
+        "aws/aws-sdk-php": "^3.132.4",
         "php": ">=7.4",
         "spryker/guzzle": "^2.0.0",
         "spryker/kernel": "^3.30.0",
