APPS:1393 update composer json

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "php": ">=7.4",
         "spryker/guzzle": "^2.0.0",
         "spryker/kernel": "^3.30.0",
-        "spryker/message-broker-extension": "*",
+        "spryker/message-broker-extension": "^1.0.0",
         "spryker/symfony": "^3.7.0",
         "symfony/amazon-sqs-messenger": "^5.0.0 || ^6.0.0"
     },
