APPS:1393 add composer changes

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "spryker/kernel": "^3.30.0",
         "spryker/message-broker-extension": "^1.0.0",
         "spryker/symfony": "^3.7.0",
+        "spryker/transfer": "^3.25.0",
         "symfony/amazon-sqs-messenger": "^5.0.0 || ^6.0.0"
     },
     "require-dev": {
