--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "spryker/guzzle": "^2.0.0",
         "spryker/kernel": "^3.30.0",
         "spryker/message-broker-extension": "^1.0.0",
+        "spryker/store": "^1.1.0",
         "spryker/symfony": "^3.7.0",
         "spryker/transfer": "^3.25.0",
+        "spryker/util-encoding": "^1.0.0 || ^2.0.0",
         "symfony/amazon-sqs-messenger": "^5.0.0 || ^6.0.0"
     },
     "require-dev": {
@@ -27,9 +29,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "SprykerTest\\": "tests/SprykerTest/",
-            "SprykerTest\\Zed\\MessageBrokerAws\\Helper\\": "tests/SprykerTest/Zed/MessageBrokerAws/_support/Helper/",
-            "SprykerTest\\Zed\\MessageBrokerAws\\Messages\\": "tests/SprykerTest/Zed/MessageBrokerAws/_support/Messages/"
+            "SprykerTest\\": "tests/SprykerTest/"
         }
     },
     "minimum-stability": "dev",
@@ -44,6 +44,9 @@
         }
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
 }
