--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
         "spryker/ramsey-uuid": "*",
         "spryker/testify": "*"
     },
+    "suggest": {
+        "symfony/messenger": "If you want to use a AwsSqsMessageReceiverPlugin. Minimum required version: 5.3.0"
+    },
     "autoload": {
         "psr-4": {
             "Spryker\\": "src/Spryker/"
