--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Spryker\\": "src/Spryker/"
+            "Spryker\\": "src/Spryker/",
+            "SprykerTest\\Zed\\MessageBrokerAws\\Helper\\": "tests/SprykerTest/Zed/MessageBrokerAws/_support/Helper/"
         }
     },
     "autoload-dev": {
