--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "description": "MessageBrokerAws module",
     "license": "proprietary",
     "require": {
+        "async-aws/core": "^1.5.0",
         "async-aws/sns": "^1.0.0",
         "async-aws/sqs": "^1.0.0",
         "aws/aws-sdk-php": "^3.132.4",
