--- a/tests/SprykerTest/Zed/MessageBrokerAws/codeception.yml
+++ b/tests/SprykerTest/Zed/MessageBrokerAws/codeception.yml
@@ -23,6 +23,7 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Zed\MessageBrokerAws\Helper\MessageBrokerAwsHelper
                 - \SprykerTest\Zed\Testify\Helper\Business\BusinessHelper
+                - \SprykerTest\Zed\Testify\Helper\Business\DependencyProviderHelper
     Communication:
         path: Communication
         class_name: MessageBrokerAwsCommunicationTester
