--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": ">=8.0",
         "spryker/guzzle": "^2.0.0",
         "spryker/kernel": "^3.30.0",
+        "spryker/log": "^3.0.0",
         "spryker/message-broker-extension": "^1.0.0",
         "spryker/store": "^1.1.0",
         "spryker/symfony": "^3.7.0",
