--- a/tests/SprykerTest/Zed/MessageBrokerAws/codeception.yml
+++ b/tests/SprykerTest/Zed/MessageBrokerAws/codeception.yml
@@ -24,6 +24,7 @@ suites:
                 - \SprykerTest\Zed\MessageBrokerAws\Helper\MessageBrokerAwsHelper
                 - \SprykerTest\Zed\Testify\Helper\Business\BusinessHelper
                 - \SprykerTest\Zed\Testify\Helper\Business\DependencyProviderHelper
+                - \SprykerTest\Shared\Propel\Helper\TransactionHelper
     Communication:
         path: Communication
         actor: MessageBrokerAwsCommunicationTester
